fix: expression 개수를 5개에서 10개로 수정

--- a/src/main/resources/templates/administration/topics/addPreviewForm.html
+++ b/src/main/resources/templates/administration/topics/addPreviewForm.html
@@ -47,12 +47,14 @@
             <label for="expressionList">Expression List</label>
             <table class="tb_col" id="expressionList" name="expressionList">
                 <tr>
+                    <th>Language</th>
                     <th>Word</th>
                     <th>Meaning</th>
                     <th>Example</th>
                     <th>Pronunciation</th>
                 </tr>
                 <tr>
+                    <td>kor1</td>
                     <td>
                         <input type="text" id="expressionWord1" name="expressionWord1" required>
                     </td>
@@ -67,6 +69,7 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>eng1</td>
                     <td>
                         <input type="text" id="expressionWord2" name="expressionWord2" required>
                     </td>
@@ -81,6 +84,7 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>kor2</td>
                     <td>
                         <input type="text" id="expressionWord3" name="expressionWord3" required>
                     </td>
@@ -95,6 +99,7 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>eng2</td>
                     <td>
                         <input type="text" id="expressionWord4" name="expressionWord4" required>
                     </td>
@@ -109,6 +114,7 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>kor3</td>
                     <td>
                         <input type="text" id="expressionWord5" name="expressionWord5" required>
                     </td>
@@ -117,6 +123,81 @@
                     </td>
                     <td>
                         <textarea id="expressionExample5" name="expressionExample5" required></textarea>
+                    </td>
+                    <td>
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                    </td>
+                </tr>
+                <tr>
+                    <td>eng3</td>
+                    <td>
+                        <input type="text" id="expressionWord6" name="expressionWord6" required>
+                    </td>
+                    <td>
+                        <textarea id="expressionMeaning6" name="expressionMeaning6" required></textarea>
+                    </td>
+                    <td>
+                        <textarea id="expressionExample6" name="expressionExample6" required></textarea>
+                    </td>
+                    <td>
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                    </td>
+                </tr>
+                <tr>
+                    <td>kor4</td>
+                    <td>
+                        <input type="text" id="expressionWord7" name="expressionWord7" required>
+                    </td>
+                    <td>
+                        <textarea id="expressionMeaning7" name="expressionMeaning7" required></textarea>
+                    </td>
+                    <td>
+                        <textarea id="expressionExample7" name="expressionExample7" required></textarea>
+                    </td>
+                    <td>
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                    </td>
+                </tr>
+                <tr>
+                    <td>eng4</td>
+                    <td>
+                        <input type="text" id="expressionWord8" name="expressionWord8" required>
+                    </td>
+                    <td>
+                        <textarea id="expressionMeaning8" name="expressionMeaning8" required></textarea>
+                    </td>
+                    <td>
+                        <textarea id="expressionExample8" name="expressionExample8" required></textarea>
+                    </td>
+                    <td>
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                    </td>
+                </tr>
+                <tr>
+                    <td>kor5</td>
+                    <td>
+                        <input type="text" id="expressionWord9" name="expressionWord9" required>
+                    </td>
+                    <td>
+                        <textarea id="expressionMeaning9" name="expressionMeaning9" required></textarea>
+                    </td>
+                    <td>
+                        <textarea id="expressionExample9" name="expressionExample9" required></textarea>
+                    </td>
+                    <td>
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                    </td>
+                </tr>
+                <tr>
+                    <td>eng5</td>
+                    <td>
+                        <input type="text" id="expressionWord10" name="expressionWord10" required>
+                    </td>
+                    <td>
+                        <textarea id="expressionMeaning10" name="expressionMeaning10" required></textarea>
+                    </td>
+                    <td>
+                        <textarea id="expressionExample10" name="expressionExample10" required></textarea>
                     </td>
                     <td>
                         <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
