--- a/src/main/resources/templates/administration/topics/editPreviewForm.html
+++ b/src/main/resources/templates/administration/topics/editPreviewForm.html
@@ -47,12 +47,14 @@
             <label for="expressionList">Expression List</label>
             <table class="tb_col" id="expressionList" name="expressionList">
                 <tr>
+                    <th>Language</th>
                     <th>Word</th>
                     <th>Meaning</th>
                     <th>Example</th>
                     <th>Pronunciation</th>
                 </tr>
                 <tr>
+                    <td>kor1</td>
                     <td>
                         <input type="text" id="expressionWord1" name="expressionWord1"
                                th:value="${expressionList.get(0).word}" required>
@@ -68,6 +70,7 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>eng1</td>
                     <td>
                         <input type="text" id="expressionWord2" name="expressionWord2"
                                th:value="${expressionList.get(1).word}" required>
@@ -83,6 +86,7 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>kor2</td>
                     <td>
                         <input type="text" id="expressionWord3" name="expressionWord3"
                                th:value="${expressionList.get(2).word}" required>
@@ -98,6 +102,7 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>eng2</td>
                     <td>
                         <input type="text" id="expressionWord4" name="expressionWord4"
                                th:value="${expressionList.get(3).word}" required>
@@ -113,6 +118,7 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>kor3</td>
                     <td>
                         <input type="text" id="expressionWord5" name="expressionWord5"
                                th:value="${expressionList.get(4).word}" required>
@@ -122,6 +128,86 @@
                     </td>
                     <td>
                         <textarea id="expressionExample5" name="expressionExample5" th:text="${expressionList.get(4).example}" required></textarea>
+                    </td>
+                    <td>
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                    </td>
+                </tr>
+                <tr>
+                    <td>eng3</td>
+                    <td>
+                        <input type="text" id="expressionWord6" name="expressionWord6"
+                               th:value="${expressionList.get(5).word}" required>
+                    </td>
+                    <td>
+                        <textarea id="expressionMeaning6" name="expressionMeaning6" th:text="${expressionList.get(5).meaning}" required></textarea>
+                    </td>
+                    <td>
+                        <textarea id="expressionExample6" name="expressionExample6" th:text="${expressionList.get(5).example}" required></textarea>
+                    </td>
+                    <td>
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                    </td>
+                </tr>
+                <tr>
+                    <td>kor4</td>
+                    <td>
+                        <input type="text" id="expressionWord7" name="expressionWord7"
+                               th:value="${expressionList.get(6).word}" required>
+                    </td>
+                    <td>
+                        <textarea id="expressionMeaning7" name="expressionMeaning7" th:text="${expressionList.get(6).meaning}" required></textarea>
+                    </td>
+                    <td>
+                        <textarea id="expressionExample7" name="expressionExample7" th:text="${expressionList.get(6).example}" required></textarea>
+                    </td>
+                    <td>
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                    </td>
+                </tr>
+                <tr>
+                    <td>eng4</td>
+                    <td>
+                        <input type="text" id="expressionWord8" name="expressionWord8"
+                               th:value="${expressionList.get(7).word}" required>
+                    </td>
+                    <td>
+                        <textarea id="expressionMeaning8" name="expressionMeaning8" th:text="${expressionList.get(7).meaning}" required></textarea>
+                    </td>
+                    <td>
+                        <textarea id="expressionExample8" name="expressionExample8" th:text="${expressionList.get(7).example}" required></textarea>
+                    </td>
+                    <td>
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                    </td>
+                </tr>
+                <tr>
+                    <td>kor5</td>
+                    <td>
+                        <input type="text" id="expressionWord9" name="expressionWord9"
+                               th:value="${expressionList.get(8).word}" required>
+                    </td>
+                    <td>
+                        <textarea id="expressionMeaning9" name="expressionMeaning9" th:text="${expressionList.get(8).meaning}" required></textarea>
+                    </td>
+                    <td>
+                        <textarea id="expressionExample9" name="expressionExample9" th:text="${expressionList.get(8).example}" required></textarea>
+                    </td>
+                    <td>
+                        <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
+                    </td>
+                </tr>
+                <tr>
+                    <td>eng5</td>
+                    <td>
+                        <input type="text" id="expressionWord10" name="expressionWord10"
+                               th:value="${expressionList.get(9).word}" required>
+                    </td>
+                    <td>
+                        <textarea id="expressionMeaning10" name="expressionMeaning10" th:text="${expressionList.get(9).meaning}" required></textarea>
+                    </td>
+                    <td>
+                        <textarea id="expressionExample10" name="expressionExample10" th:text="${expressionList.get(9).example}" required></textarea>
                     </td>
                     <td>
                         <input type="file" name="expressionPronunciation" accept="audio/mpeg" required />
