feat: WebSecurityConfig Change to make USER_ROLE Activate

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <ul>
     <li>관리
         <ul>
-            <li><a href="/admin/topics">토픽 관리</a></li>
+            <li><a href="/administration/topics">토픽 관리</a></li>
         </ul>
     </li>
 </ul>
